--- a/index.html
+++ b/index.html
@@ -7,8 +7,46 @@
   <title>Document</title>
 </head>
 <body>
-    <div class="test__block">
-      testing
+    
+    <header class="header">
+      <div class="header__inner">
+        <div class="header__logo">Test</div>
+        <a href="cart.html" class="header__cart">Go to cart</a>
+      </div>
+    </header>
+
+
+    <div class="container">
+      
+        <div class="block">
+
+          <div class="block__item" order-state="1">
+            <h3 class="block__title">Product 1</h3>
+            <a href="#" class="block__btn">test</a>
+          </div>
+
+          <div class="block__item" order-state="2">
+            <h3 class="block__title">Product 2</h3>
+          </div>
+
+          <div class="block__item" order-state="3">
+            <h3 class="block__title">Product 3</h3>
+          </div>
+
+          <div class="block__item" order-state="4">
+            <h3 class="block__title">Product 4</h3>
+          </div>
+
+          <div class="block__item" order-state="5">
+            <h3 class="block__title">Product 5</h3>
+          </div>
+
+          <div class="block__item" order-state="6">
+            <h3 class="block__title">Product 6</h3>
+          </div>
+
+        </div>
+
     </div>
 
     <script src="main.js"></script>
