--- a/cart.html
+++ b/cart.html
@@ -12,6 +12,7 @@
     <div class="orders">
       Your orders:
       
+      <a href="#" class="order__btn">button</a>
     </div>
   </div>
   <a href="index.html"> go to back</a>
