--- a/index.html
+++ b/index.html
@@ -15,38 +15,56 @@
       </div>
     </header>
 
-
     <div class="container">
       
-        <div class="block">
+          <div class="block">
+              <div class="block__inner">
 
-          <div class="block__item" order-state="1">
-            <h3 class="block__title">Product 1</h3>
-            <a href="#" class="block__btn">test</a>
+                <div class="block__item" order-state="1">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 1</h3>
+                    <button class="block__btn">Buy now</button>
+                  </div>
+                </div>
+
+                <div class="block__item" order-state="2">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 2</h3>
+                    <button class="block__btn">Buy now</button>
+                  </div>
+                </div>
+
+                <div class="block__item" order-state="3">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 3</h3>
+                    <button class="block__btn">Buy now</button>
+                  </div>
+                </div>
+
+                <div class="block__item" order-state="4">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 4</h3>
+                    <button class="block__btn">Buy now</button>
+                  </div>
+                </div>
+
+                <div class="block__item" order-state="5">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 5</h3>
+                    <button class="block__btn">Buy now</button>
+                  </div>
+                </div>
+
+                <div class="block__item" order-state="6">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 6</h3>
+                    <button class="block__btn">Buy now</button>
+                  </div>
+                </div>
+
+              </div>
           </div>
-
-          <div class="block__item" order-state="2">
-            <h3 class="block__title">Product 2</h3>
-          </div>
-
-          <div class="block__item" order-state="3">
-            <h3 class="block__title">Product 3</h3>
-          </div>
-
-          <div class="block__item" order-state="4">
-            <h3 class="block__title">Product 4</h3>
-          </div>
-
-          <div class="block__item" order-state="5">
-            <h3 class="block__title">Product 5</h3>
-          </div>
-
-          <div class="block__item" order-state="6">
-            <h3 class="block__title">Product 6</h3>
-          </div>
-
-        </div>
-
+      
     </div>
 
     <script src="main.js"></script>
