--- a/cart.html
+++ b/cart.html
@@ -11,8 +11,13 @@
   <div class="container">
     <div class="orders">
       Your orders:
-      
       <a href="#" class="order__btn">button</a>
+      <div class="orders__inner">
+
+      </div>
+
+      
+
     </div>
   </div>
   <a href="index.html"> go to back</a>
