--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
                   </div>
                 </div>
 
+                <div class="block__item" order-state="7">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 7</h3>
+                    <button class="block__btn">Buy now</button>
+                  </div>
+                </div>
+
               </div>
           </div>
       
