--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="orders">
-      Your orders:
+      Your orders:  <button class="order__btn">clear cart</button>  
       
       <div class="orders__inner">
 
