--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                   <div class="block__content">
                     <h3 class="block__title">Product 1</h3>
                     <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
                   </div>
                 </div>
 
@@ -31,6 +32,7 @@
                   <div class="block__content">
                     <h3 class="block__title">Product 2</h3>
                     <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
                   </div>
                 </div>
 
@@ -38,6 +40,7 @@
                   <div class="block__content">
                     <h3 class="block__title">Product 3</h3>
                     <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
                   </div>
                 </div>
 
@@ -45,6 +48,7 @@
                   <div class="block__content">
                     <h3 class="block__title">Product 4</h3>
                     <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
                   </div>
                 </div>
 
@@ -52,6 +56,7 @@
                   <div class="block__content">
                     <h3 class="block__title">Product 5</h3>
                     <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
                   </div>
                 </div>
 
@@ -59,6 +64,7 @@
                   <div class="block__content">
                     <h3 class="block__title">Product 6</h3>
                     <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
                   </div>
                 </div>
 
@@ -66,6 +72,39 @@
                   <div class="block__content">
                     <h3 class="block__title">Product 7</h3>
                     <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
+                  </div>
+                </div>
+
+                <div class="block__item" order-state="8">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 8</h3>
+                    <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
+                  </div>
+                </div>
+
+                <div class="block__item" order-state="9">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 9</h3>
+                    <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
+                  </div>
+                </div>
+
+                <div class="block__item" order-state="10">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 10</h3>
+                    <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
+                  </div>
+                </div>
+
+                <div class="block__item" order-state="11">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 11</h3>
+                    <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
                   </div>
                 </div>
 
