--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
                   </div>
                 </div>
 
+                <div class="block__item" order-state="12">
+                  <div class="block__content">
+                    <h3 class="block__title">Product 12</h3>
+                    <button class="block__btn">Buy now</button>
+                    <span class="button__close"></span>
+                  </div>
+                </div>
+
               </div>
           </div>
       
